--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
     text-decoration:none ;
-    background: url(FTK.jpg);
+    background: url(WALLPAPER.png);
     background-size:cover;
     background-attachment: fixed;
 }
